# CPP

./: CMakeLists.txt  README.md  extern.cpp  main.cpp
ANDKDev/app/: build.gradle
ANDKDev/app/src/androidTest/java/com/ysy/andkdev/: ExampleInstrumentedTest.kt
ANDKDev/app/src/main/: AndroidManifest.xml
ANDKDev/app/src/main/cpp/: CMakeLists.txt  logger.h  native-lib.cpp  test_native.cpp  test_nn.cpp
ANDKDev/app/src/main/java/com/ysy/andkdev/: MainActivity.kt  NDKApp.kt
ANDKDev/app/src/main/res/values/: strings.xml
ANDKDev/app/src/test/java/com/ysy/andkdev/: ExampleUnitTest.kt
ANDKDev/gradle/wrapper/: gradle-wrapper.properties
